# otus__numpy_basic

./: .gitignore  homework.ipynb  pyproject.toml
dmia/: gradient_check.py
dmia/classifiers/: logistic_regression.py
